# zbp-avx

./: .gitignore  CMakeLists.txt  Jacobi.cpp  Jacobi.h  NoAvxJacobi.cpp  NoAvxJacobi.h  NoAvxSystemOfEquations.cpp  NoAvxSystemOfEquations.h  SystemOfEquations.h  SystemofEquations.cpp  main.cpp  system_1024.txt  system_16.txt  system_8.txt
vectorclass/: changelog.txt
